--- a/mycelium/apps/marketing_site/templates/marketing_site/contact_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/contact_us.html
@@ -4,9 +4,9 @@
 {% block description %}Sometimes, you just need to talk to someone - we're available to support the organizations we serve.{% endblock %}
 {% block extra_body %}class="contact_us"{% endblock %}
 
-{% block page_content %}
-<div class="page_header">Say Hello!</div>
+{% block page_header %}Say Hello!{% endblock %}
 
+{% block page_content %}
 <div class="page_subheader">We're here to help.  You can reach us any of the following ways:</div>
 <div class="contact_methods">
 <div class="container">
@@ -26,4 +26,5 @@
 </div>
 </div>
 </div>
+
 {% endblock %}
