--- a/mycelium/apps/marketing_site/templates/marketing_site/home.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/home.html
@@ -4,6 +4,8 @@
 {% block description %}GoodCloud makes it easier to run your small nonprofit. Track people, donations, volunteers and more - it's superpowers for small nonprofits!{% endblock %}
 {% block extra_body %}class="home_page"{% endblock %}
 
+{% block page_header %}{% endblock %}
+
 {% block page_content %}
 <div id="home_boxes">
 	<div class="container">
@@ -12,7 +14,7 @@
 
 			<div class="title">We &hearts; nonprofits.</div>
 			<div class="description png_bg identical_height_block">
-				We've been staff, donors, and volunteers. We care deeply about your mission. We also happen to be software ninjas.
+				We've been staff, donors, and volunteers. We care deeply about your mission. We're here to help you thrive.
 			</div>
 			<div class="action"><a href="{% url marketing_site:about_us %}">Learn about our mission!</a></div>
 		</div>
