--- a/mycelium/apps/marketing_site/templates/marketing_site/legal.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/legal.html
@@ -3,8 +3,9 @@
 {% block title %}The legal formalities, as human as we could make them: GoodCloud{% endblock %}
 {% block description %}Our user agreement and privacy policy, put as friendly as we could make them.{% endblock %}
 
+{% block page_header %}The Legal Stuff<div class="subheading">(as human as we could make it)</div>{% endblock %}
+
 {% block page_content %}
-<div class="page_header">The Legal Stuff<div class="subheading">(as human as we could make it)</div></div>
 
 <div id="side_nav" class="tabs legal">
 	<ul class="nav_links">
@@ -168,7 +169,6 @@
 	</div>
 	
 </div>
-
 
 
 
