--- a/mycelium/apps/marketing_site/templates/marketing_site/praise.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/praise.html
@@ -4,9 +4,9 @@
 {% block description %}GoodCloud users rave about how easy it is to use, and how it's helping their organizations run more efficently. See what they had to say!{% endblock %}
 {% block extra_body %}class="praise"{% endblock %}
 
-{% block page_content %}
-<div class="page_header">Love for the <img class="the_cloud" src="{% media_url "images/goodcloud-logo-60-with-shadow.png" %}" /></div>
+{% block page_header %}Love for the <img class="the_cloud" src="{% media_url "images/goodcloud-logo-60-with-shadow.png" %}" />{% endblock %}
 
+{% block page_content %}
 <div class="testimonial png_bg style_3">
 	<div class="quote">Very Easy! I love how when I start typing the name it comes up mid-word. It reads my mind!</div>
 	<div class="person">-Rachel L.</div>
