--- a/mycelium/apps/accounts/templates/accounts/signup.html
+++ b/mycelium/apps/accounts/templates/accounts/signup.html
@@ -3,47 +3,43 @@
 {% block title %}Sign up for a free account at GoodCloud{% endblock %}
 {% block description %}See for yourself the best way to run a small nonprofit. Sign up for a free account right here!{% endblock %}
 
+{% block page_header %}One-step easy.{% endblock %}
+
 {% block page_content %}
-<div class="signup_page">
-<div class="organization_and_domain">
-	<div class="organization_name">One-step easy.</div>
-	<div class="domain"></div>
-</div>
-<div class="clearfix"></div>
-<div class="single_dialog">
-<div class="welcome_message">Create a free account to see firsthand what GoodCloud can do for your organization.</div>
+<div class="single_dialog signup_page">
+	<div class="welcome_message">Sign up for a free account to see firsthand what GoodCloud can do for your organization.</div>
 
-<form action="{% url accounts:signup %}" method="POST" id="signup_form" class="edit_mode_on" >{% csrf_token %}
+	<form action="{% url accounts:signup %}" method="POST" id="signup_form" class="edit_mode_on" >{% csrf_token %}
 
-<div class="form_section nonprofit">
-	<div class="section_title">About your nonprofit</div>
-	{% plain_editable_field account_form.name %}
-	<div class="editable_field" id="container_id_{{account_form.subdomain.html_name}}">
-			<label class="generic_field_label">Pick your custom <br/>Goodcloud address:</label>
-			<span class="edit_field"><span class="address_boilerplate">http://</span>{{account_form.subdomain}}<span class="address_boilerplate">.agoodcloud.com</span></span>
+	<div class="form_section nonprofit">
+		<div class="section_title">About your nonprofit</div>
+		{% plain_editable_field account_form.name %}
+		<div class="editable_field" id="container_id_{{account_form.subdomain.html_name}}">
+				<label class="generic_field_label">Pick your custom <br/>Goodcloud address:</label>
+				<span class="edit_field"><span class="address_boilerplate">http://</span>{{account_form.subdomain}}<span class="address_boilerplate">.agoodcloud.com</span></span>
+		</div>
+		<div id="subdomain_verification" class="editable_field not_verified" verification_url="{% url accounts:verify_subdomain %}">
+				<div class="subdomain_response png_bg"></div>
+		</div>
 	</div>
-	<div id="subdomain_verification" class="editable_field not_verified" verification_url="{% url accounts:verify_subdomain %}">
-			<div class="subdomain_response png_bg"></div>
+
+	<div class="form_section you">
+		<div class="section_title">About you</div>
+		{% plain_editable_field user_form.first_name "Full name:" %}
+		{% plain_editable_field user_form.email %}
+		{% plain_editable_field user_form.username %}
+		{% plain_editable_field user_form.password %}
 	</div>
-</div>
 
-<div class="form_section you">
-	<div class="section_title">About you</div>
-	{% plain_editable_field user_form.first_name "Full name:" %}
-	{% plain_editable_field user_form.email %}
-	{% plain_editable_field user_form.username %}
-	{% plain_editable_field user_form.password %}
-</div>
-
-<div class="form_section terms">
-	<div class="checkbox_and_label">
-	<span class="agree_checkbox">{{account_form.agreed_to_terms}}</span> <label for="id_agreed_to_terms">I agree to the <a href="{% url marketing_site:legal %}" target="_blank">Terms of Use</a></label>
+	<div class="form_section terms">
+		<div class="checkbox_and_label">
+		<span class="agree_checkbox">{{account_form.agreed_to_terms}}</span> <label for="id_agreed_to_terms">I agree to the <a href="{% url marketing_site:legal %}" target="_blank">User Agreement</a></label>
+		</div>
 	</div>
+
+	<input type="submit" id="submit_button" class="mycelium_btn auto_disable" value="Create your Account" disabled_text="Creating your Account..." />
+
+	</form>
 </div>
 
-<input type="submit" id="submit_button" class="mycelium_btn auto_disable" value="Create your Account" disabled_text="Creating your Account..." />
-
-</form>
-</div>
-</div>
 {% endblock %}
