--- a/mycelium/apps/marketing_site/templates/marketing_site/_top_nav.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/_top_nav.html
@@ -10,8 +10,9 @@
 	<a {% current_page_link_and_class request "marketing_site:features" "" %} >Features</a>
 	<a {% current_page_link_and_class request "marketing_site:tour" "" %} >Tour</a>
 	<a {% current_page_link_and_class request "marketing_site:pricing" "" %} >Pricing</a>
-	<a {% current_page_link_and_class request "marketing_site:praise" "" %} >Newsletter</a>
-	<a {% current_page_link_and_class request "accounts:signup" "" %} >Free Trial</a>
+	<a {% current_page_link_and_class request "marketing_site:praise" "" %} >Newsletter</a> 
+	{# <a {% current_page_link_and_class request "accounts:signup" "" %} >Log In</a> #}
+	<a {% current_page_link_and_class request "accounts:signup" "" %} >Sign Up</a>
 	
 {% endspaceless %}</div>
 </div>
