--- a/mycelium/apps/marketing_site/templates/marketing_site/base.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/base.html
@@ -15,14 +15,18 @@
 {% endblock %}
 {% block content %}
 	{% include "marketing_site/_top_nav.html" %}
-	<div class="clearfix"></div>
 	<div id="wrap">
-	<div class="page_content">
+	<div class="page_header">{% block page_header %}{% endblock %}</div>
+
+	<div class="page_content_body">
 	{% block page_content %}
 	{% endblock %}
-	</div>
-	</div>
+	<div class="clearfix"></div>
 	{% include "marketing_site/_footer.html" %}	
+	</div>
+	
+	</div>
+	
 	<script type="text/javascript">
 	  (function() {
 	    var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
