--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -3,100 +3,147 @@
 {% block title %}The features that small nonprofits really need: GoodCloud{% endblock %}
 {% block description %}We built GoodCloud collaboratively with small nonprofits, to do the things you do every day. Contact, volunteer, and donor tracking - it's all here.{% endblock %}
 
+
+{% block page_header %}All the things you actually need.{% endblock %}
+
 {% block page_content %}
-<div class="page_header">All the things you need, nothing you don't.</div>
+<div id="side_nav" class="tabs features">
+	<ul class="nav_links png_bg">
+	 	<li><a href="#everything_in_one_place">Everything in one place</a></li>
+	 	<li><a href="#know_your_people">Know your people</a></li>
+	 	<li><a href="#save_money">Save money</a></li>
+	 	<li><a href="#less_computer_time">Less computer-time</a></li>
+	 	<li><a href="#gets_younger">Software that gets better</a></li>
+ 	</ul>
 
-<div class="page_content_body">
-<div class="features">
-<div class="container">
-	<div class="row">
-	{# GoodCloud is a database and operations suite for small nonprofits.  #}
-	<div class="feature find_fast">
-		<div class="title">Find people fast</div>
-		<div class="description png_bg identical_height_block">The fastest, easiest contact lookup on this side of the galaxy.
-Nonprofits told us that looking up a phone number, email or address is something they do hundreds of times a day. We optimized GoodCloud to make finding a contact super-fast.</div>
-	</div>
-	
-	<div class="feature full_contact">
-		<div class="title">Full contact information </div>
-		<div class="description png_bg identical_height_block">It’s all here - home and work addresses, organizations, employees, and email. We’ve even got support for the next generation of contact info, like twitter. You'll never lose an address again.</div>
-	</div>
-	</div>
-	<div class="row">
-	
-	<div class="feature groups">
-		<div class="title">Organize people the way you work</div>
-		<div class="description png_bg identical_height_block">Intuitively create groups of people that fit your mission, and have them automatically stay up to date. Use your groups to contact people, send letters, and more. </div>
-	</div>
-	
-	<div class="feature volunteer">
-		<div class="title">Track volunteer hours</div>
-		<div class="description png_bg identical_height_block">The year-end volunteer hours report just turned into one click. GoodCloud quickly and easily lets you log volunteer hours, automatically doing the math for you.</div>
-	</div>
-	</div>
-
-	<div class="row">
-	
-	<div class="feature donations">
-		<div class="title">Easily record donations</div>
-		<div class="description png_bg identical_height_block">Enter a donation once, then easily make reports and view summary statistics. Now it's easy to keep track of where the funding comes from, and plan for the future.</div>
-	</div>
-
-<!--	<div class="feature thank_you_letters">
-		<div class="title">Thank you letters</div>
-		<div class="description png_bg identical_height_block">Create fields that fit your mission
-Every nonprofit is different - that’s why we’ve made it easy to set your own categories and tags for people, and integrated them throughout GoodCloud.</div>
-	</div> 
--->
-	<div class="feature custom_tags">
-		<div class="title">Make your own tags</div>
-		<div class="description png_bg identical_height_block">Every nonprofit is different - that’s why we’ve made it easy to make your own categories and tags for people, and integrated your custom tags throughout GoodCloud.</div>
-	</div>
-
-	</div>
-
-	<div class="row">
-	<div class="feature spreadsheet">
-		<div class="title">Sometimes, you just need a spreadsheet.</div>
-		<div class="description png_bg identical_height_block">We made it easy to download spreadsheets of anything in GoodCloud. When you’ve gotta make a chart/print a book/make program notes, GoodCloud gives you the data you need, and gets out of your way.</div>
-	</div>
-
-	<div class="feature data_import">
-		<div class="title">Bring your data with you</div>
-		<div class="description png_bg identical_height_block">You’ve got a system you’re using right now, and there’s no way we’d ask you to type everything in again. Our advanced data import tool makes it a snap to bring your current data into GoodCloud.</div>
-	</div>
-	</div>
-
-	<div class="row">
-
-	<div class="feature support">
-		<div class="title">Real-people support</div>
-		<div class="description png_bg identical_height_block">We answer the phone. And our email.  
-We know you don’t have an IT department, and you don’t want to spend your days futzing with a database.  That’s why we’re available anytime to answer questions, listen, and fix any issues you run into.</div>
-	</div>
-	<div class="feature cloud">
-			<div class="title">We're on the Cloud</div>
-			<div class="description png_bg identical_height_block">No more servers.
-	The cloud has been transforming businesses for the last few years, and GoodCloud brings those benefits to small nonprofits. We’ll take care of managing and securing the servers - and leave you time to focus on your mission.</div>
-	</div>
-
-	</div>
-
-	<div class="row">
-		<div class="feature more_to_come">
-			<div class="title">We're not done yet</div>
-			<div class="description png_bg identical_height_block">We're not stopping until GoodCloud takes care of all of your computer headaches, without making any new ones. We've got features on the road-map for Develoment Directors, Volunteer Coordinators, Executive Directors, and Volunteers!</div>
+	<div class="tab_content company" id="everything_in_one_place">
+		<div class="page_top_hook">Contacts, Donations, and Volunteers, all in one place.</div>
+		<div class="row">
+			{# GoodCloud is a database and operations suite for small nonprofits.  #}		
+				<div class="feature find_fast">
+					<div class="title">Find people fast</div>
+					<div class="description png_bg identical_height_block">The fastest, easiest contact lookup on this side of the galaxy.
+			Nonprofits told us that looking up a phone number, email or address is something they do hundreds of times a day. We optimized GoodCloud to make finding a contact super-fast.</div>
+				</div>
+				
+				<div class="feature full_contact">
+					<div class="title">Full contact information </div>
+					<div class="description png_bg identical_height_block">It’s all here - home and work addresses, organizations, employees, and email. We’ve even got support for the next generation of contact info, like twitter. You'll never lose an address again.</div>
+				</div>
+				</div>
+				<div class="row">
+				
+				<div class="feature groups">
+					<div class="title">Organize people the way you work</div>
+					<div class="description png_bg identical_height_block">Intuitively create groups of people that fit your mission, and have them automatically stay up to date. Use your groups to contact people, send letters, and more. </div>
+				</div>
+				
+				<div class="feature volunteer">
+					<div class="title">Track volunteer hours</div>
+					<div class="description png_bg identical_height_block">The year-end volunteer hours report just turned into one click. GoodCloud quickly and easily lets you log volunteer hours, automatically doing the math for you.</div>
+				</div>
 		</div>
-		<div class="">
+	</div>
+	<div class="tab_content company" id="know_your_people">
+		<div class="page_top_hook">Never forget a birthday. Or a conversation.</div>
+
+		<div class="row">
+			<div class="feature donations">
+				<div class="title">Easily record donations</div>
+				<div class="description png_bg identical_height_block">Enter a donation once, then easily make reports and view summary statistics. Now it's easy to keep track of where the funding comes from, and plan for the future.</div>
+			</div>
+
+		<!--	<div class="feature thank_you_letters">
+				<div class="title">Thank you letters</div>
+				<div class="description png_bg identical_height_block">Create fields that fit your mission
+		Every nonprofit is different - that’s why we’ve made it easy to set your own categories and tags for people, and integrated them throughout GoodCloud.</div>
+			</div> 
+		-->
+			<div class="feature custom_tags">
+				<div class="title">Make your own tags</div>
+				<div class="description png_bg identical_height_block">Every nonprofit is different - that’s why we’ve made it easy to make your own categories and tags for people, and integrated your custom tags throughout GoodCloud.</div>
+			</div>
 
 		</div>
 	</div>
+	<div class="tab_content company" id="save_money">
+		<div class="page_top_hook">Costs less than the competitors.</div>
+		<div class="row">
+		<div class="feature spreadsheet">
+			<div class="title">Sometimes, you just need a spreadsheet.</div>
+			<div class="description png_bg identical_height_block">We made it easy to download spreadsheets of anything in GoodCloud. When you’ve gotta make a chart/print a book/make program notes, GoodCloud gives you the data you need, and gets out of your way.</div>
+		</div>
 
+		<div class="feature data_import">
+			<div class="title">Bring your data with you</div>
+			<div class="description png_bg identical_height_block">You’ve got a system you’re using right now, and there’s no way we’d ask you to type everything in again. Our advanced data import tool makes it a snap to bring your current data into GoodCloud.</div>
+		</div>
+		</div>
+
+	</div>
+	<div class="tab_content company" id="less_computer_time">
+		
+		<div class="page_top_hook">Every minute at the computer is a minute away from your mission. Spend fewer of them.</div>
+
+		<div class="row">
+
+		<div class="feature support">
+			<div class="title">Real-people support</div>
+			<div class="description png_bg identical_height_block">We answer the phone. And our email.  
+	We know you don’t have an IT department, and you don’t want to spend your days futzing with a database.  That’s why we’re available anytime to answer questions, listen, and fix any issues you run into.</div>
+		</div>
+		<div class="feature cloud">
+				<div class="title">We're on the Cloud</div>
+				<div class="description png_bg identical_height_block">No more servers.
+		The cloud has been transforming businesses for the last few years, and GoodCloud brings those benefits to small nonprofits. We’ll take care of managing and securing the servers - and leave you time to focus on your mission.</div>
+		</div>
+
+		</div>
+
+		<div class="row">
+			<div class="feature more_to_come">
+				<div class="title">We're not done yet</div>
+				<div class="description png_bg identical_height_block">We're not stopping until GoodCloud takes care of all of your computer headaches, without making any new ones. We've got features on the road-map for Develoment Directors, Volunteer Coordinators, Executive Directors, and Volunteers!</div>
+			</div>
+			<div class="">
+
+			</div>
+		</div>
+
+	</div>
+	<div class="tab_content company" id="gets_younger">
+		
+		<div class="page_top_hook">Software that gets better with time - for free.</div>
+
+		<div class="row">
+
+		<div class="feature support">
+			<div class="title">Real-people support</div>
+			<div class="description png_bg identical_height_block">We answer the phone. And our email.  
+	We know you don’t have an IT department, and you don’t want to spend your days futzing with a database.  That’s why we’re available anytime to answer questions, listen, and fix any issues you run into.</div>
+		</div>
+		<div class="feature cloud">
+				<div class="title">We're on the Cloud</div>
+				<div class="description png_bg identical_height_block">No more servers.
+		The cloud has been transforming businesses for the last few years, and GoodCloud brings those benefits to small nonprofits. We’ll take care of managing and securing the servers - and leave you time to focus on your mission.</div>
+		</div>
+
+		</div>
+
+		<div class="row">
+			<div class="feature more_to_come">
+				<div class="title">We're not done yet</div>
+				<div class="description png_bg identical_height_block">We're not stopping until GoodCloud takes care of all of your computer headaches, without making any new ones. We've got features on the road-map for Develoment Directors, Volunteer Coordinators, Executive Directors, and Volunteers!</div>
+			</div>
+			<div class="">
+
+			</div>
+		</div>
+
+	</div>	
 </div>
-</div>
+
 <a href="{% url accounts:signup %}" class="page_action png_bg">Try GoodCloud today!</a>
 <div class="clearfix"></div>
-</div>
-
 
 {% endblock %}
