--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -9,6 +9,10 @@ Orange: #ff6600;
 body {
 	background: url("../images/background-pattern-green.png");
 	background: url("../images/background-noise-green.png");
+/*	background-color: #0a5ab9;
+	background-image: url("../images/marketing-background-plain-4.jpg");
+	background-repeat: no-repeat;
+	background-position: 50% 0px;*/
 }
 main_nav {
 	display: block;
