--- a/mycelium/apps/marketing_site/templates/marketing_site/legal.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/legal.html
@@ -11,6 +11,7 @@
 	<ul class="nav_links">
 	 	<li><a href="#user_agreement">User Agreement</a></li>
 	 	<li><a href="#privacy_policy">Privacy Policy</a></li>
+	 	<li><a href="#copyright">Copyright</a></li>
  	</ul>
 	<div class="tab_content" id="user_agreement">
 		<div class="tab_title">User Agreement</div>
@@ -167,7 +168,10 @@
 		</p>
 
 	</div>
-	
+	<div class="tab_content" id="user_agreement">
+		<div class="tab_title">Please ask before borrowing.</div>
+		All content is copyright GoodCloud, LLC, 2010-{% now "Y" %}.  All rights are reserved.
+	</div>
 </div>
 
 
