--- a/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
@@ -1,8 +1,42 @@
 {% load i18n cache current_page  %}<div id="footer">
-{# 	<div class="copyright">All content copyright GoodCloud, LLC, 2010-{% now "Y" %}</div> #}
-	{# <div class="footer_links">{% show_menu %}</div> #}
-	<a {% current_page_link_and_class request "marketing_site:about_us" "" %}	>About us</a> | 
-	<a {% current_page_link_and_class request "blog" "" %} 						>Blog</a> | 
-	<a {% current_page_link_and_class request "marketing_site:legal" "" %} 		>Legal</a> | 
-	<a {% current_page_link_and_class request "marketing_site:contact_us" "" %} >Contact us</a>
+<table class="footer_table">
+<tr>
+	<td>
+		<a href="{% url marketing_site:about_us %}" class="top_link" >About Us</a>
+		<a href="{% url marketing_site:about_us %}#our_company">Our Company</a>
+		<a href="{% url marketing_site:about_us %}#our_mission">Our Mission</a>
+		<a href="{% url marketing_site:about_us %}#our_team">Our Team</a>
+	</td>
+	<td>
+		<a href="{% url marketing_site:features %}" class="top_link" >Features</a>
+		<a href="{% url marketing_site:features %}#everything_in_one_place">All-in-one</a>
+		<a href="{% url marketing_site:features %}#our_mission">Full CRM</a>
+		<a href="{% url marketing_site:features %}#our_team">Lower cost</a>
+		<a href="{% url marketing_site:features %}#our_team">Save time</a>
+		<a href="{% url marketing_site:features %}#our_team">Cloud-based</a>
+	</td>
+	<td>
+		<a href="{% url marketing_site:features %}" class="top_link" >Tour</a>
+		<a href="{% url marketing_site:features %}#everything_in_one_place">Video Tour</a>
+		<a href="{% url marketing_site:features %}#our_mission">Screenshots</a>
+	</td>
+	<td>
+		<a href="{% url marketing_site:features %}" class="top_link" >Legal</a>
+		<a href="{% url marketing_site:features %}#everything_in_one_place">User Agreement</a>
+		<a href="{% url marketing_site:features %}#our_mission">Privacy Policy</a>
+		<div class="copyright">Copyright</div>
+	</td>
+	<td>
+		<a href="{% url marketing_site:contact_us %}" class="top_link" >Contact Us</a>
+		<a href="{% url marketing_site:contact_us %}">Email</a>
+		<a href="{% url marketing_site:contact_us %}">Phone</a>
+		<a href="#" class="contact_button online">Online</a>
+		<a href="http://www.twitter.com/agoodcloud" target="_blank">Twitter</a>
+		<a href="http://www.facebook.com/AGoodCloud" target="_blank">Facebook</a>
+		<a href="{% url blog %}">Blog</a>
+	</td>
+
+</tr>
+</table>
+
 </div>
