--- a/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
@@ -21,10 +21,10 @@
 		<p>Each year, we set financial targets, goals to grow and sustain GoodCloud. When we hit those targets, the organizations that got us there share in our profits.</p>
 
 		<div class="tab_subheading">We volunteer.</div>
-		<p>Maybe even at your organization! GoodCloud employees are required to volunteer at least 10 hours a month with nonprofits, and that time is paid. {# TODO: Want to see if we've been slacking? See our donation log! #}</p>
+		<p>Maybe even at your organization! GoodCloud employees are required to volunteer at least 10 hours a month with nonprofits, and that time is paid. Want to see if we've been slacking? See our <a href="https://spreadsheets.google.com/spreadsheet/ccc?key=0AtDfuCG0bl8rdEdia2NzZk1uSW1ZTmxzaVRORVhaTWc" target="_blank">volunteer hours log</a>!</p>
 
 		<div class="tab_subheading">We donate.</div>
-		<p>GoodCloud employees also recieve stipends to donate to the nonprofits they love.</p>
+		<p>GoodCloud employees also recieve stipends to donate to the nonprofits they love.</p><br/><br/>
 
 		<p>We do things a bit differently than some large corporations you may have heard of. We like it that way, and we think you will too.</p>
 
@@ -55,12 +55,17 @@
 
 
 	<div class="tab_content team" id="the_team">
-		<div class="page_top_hook team_description">GoodCloud is currently a team of two people. We're the ones who answer your calls, add new features, and talk with you about your needs.  Sounds a lot better than a call center halfway across the world, doesn't it? </div>
-		{# <div class="tab_title">Our Team</div> #}
-
+		<div class="page_top_hook team_description">A couple of friendly faces.</div>
+		<div class="people_pics_and_bios">
 		<div class="person tom png_bg">
-			<div class="tab_subheading">Tom Noble</div>
-			<div class="title">Co-Founder, COO, Chief Relationship Builder, Support Staff, Mail Clerk</div>
+			<div class="person_name">Tom Noble</div>
+			<div class="title">Co-Founder, Relationship-builder.</div>
+			<div class="contact_info">
+				{# <span class="bio"><a href="#" class="bio_link">Bio</a></span> #}
+				<span class="blog"><a href="{% url blog %}">Blog</a></span>
+				<span class="email"><a href="mailto:tom@agoodcloud.com">Email</a></span>
+				<span class="twitter"><a href="http://www.twitter.com/noble_tom">Twitter</a></span>
+			</div>
 			<div class="person_description">
 				<div class="bio_text">
 					<p>Tom has worked with nonprofit organizations of all sizes and functions in many different capacities:  as a managing director, mentor, project manager, volunteer, advisory board member, and consultant.  He’s still actively working with <a href="http://www.teachforamerica.org" target="_blank">Teach for America</a> after having served as a Corps Member and middle school teacher in Phoenix, AZ.</p>
@@ -71,8 +76,14 @@
 		</div>
 
 		<div class="person steven png_bg">
-			<div class="tab_subheading">Steven Skoczen</div>
-			<div class="title">Co-Founder, CEO, Director of Making Awesome Software, Support Staff, Coffee-Boy</div>
+			<div class="person_name">Steven Skoczen</div>
+			<div class="title">Co-Founder, Software-maker.</div>
+			<div class="contact_info">
+				{# <span class="bio"><a href="#" class="bio_link">Bio</a></span> #}
+				<span class="blog"><a href="{% url blog %}">Blog</a></span>
+				<span class="email"><a href="mailto:steven@agoodcloud.com">Email</a></span>
+				<span class="twitter"><a href="http://www.twitter.com/skoczen">Twitter</a></span>
+			</div>
 			<div class="person_description">
 				<div class="bio_text">
 					<p>Steven started building web applications back in the 90's, and hasn't stopped since. He's run a <a href="http://www.quantumimagery.com" target="_blank">successful web development company</a>, and started <a href="http://www.sixlinks.org" target="_blank">SixLinks.org</a> and <a href="http://www.fluidtask.com" target="_blank">Fluidtask</a>.  Over the years, he's also thrown his development behind a number of other organizations on a pro-bono basis. </p>
@@ -80,6 +91,11 @@
 					<p>When not typing into a glowing white screen, he facilitates writing workshops for <a href="http://www.writearound.org" target="_blank">Write Around Portland</a>, spends time in his studio, or finds some space in the nearby Oregon woods for he and Tomo, the world's greatest dog.</p>
 				</div>
 			</div>
+		</div>
+		</div>
+
+		<div class="team_description">
+		GoodCloud is currently a team of two people. We're the ones who answer your calls, add new features, and talk with you about your needs.  Sounds a lot better than a call center halfway across the world, doesn't it? 
 		</div>
 
 	</div>
