--- a/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
@@ -9,10 +9,10 @@
 	</td>
 	<td>
 		<a href="{% url marketing_site:features %}" class="top_link" >Features</a>
-		<a href="{% url marketing_site:features %}#everything_in_one_place">All-in-one</a>
-		<a href="{% url marketing_site:features %}#our_mission">Full CRM</a>
-		<a href="{% url marketing_site:features %}#our_team">Lower cost</a>
-		<a href="{% url marketing_site:features %}#our_team">Save time</a>
+		<a href="{% url marketing_site:features %}#everything_in_one_place">Full Nonprofit CRM</a>
+		<a href="{% url marketing_site:features %}#our_mission">Know your people</a>
+		<a href="{% url marketing_site:features %}#our_team">Save your money</a>
+		<a href="{% url marketing_site:features %}#our_team">Save your time</a>
 		<a href="{% url marketing_site:features %}#our_team">Cloud-based</a>
 	</td>
 	<td>
