--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -19,7 +19,14 @@
 	<div class="tab_content company" id="everything_in_one_place">
 		<div class="page_top_hook">Contacts, Donations, and Volunteers, all in one place.</div>
 		<div class="row">
-			{# GoodCloud is a database and operations suite for small nonprofits.  #}		
+				Many small nonprofits have their information scattered across a number of systems: there's the contacts program, the volunteer log (paper or spreadsheet), the donors program, and the various lists of participants, major donors, and the people who are coming to Thursday's event.  Wouldn't it be nice if there was one place for all that information? Well, there is.
+
+				img
+
+				With GoodCloud, all of your nonprofit's core information has one home, accessible from anywhere. Even better, the information is actually <i>connected</i>. If you've ever wondered how many of your volunteers are also donors, you can now have that answer. 
+
+				If you've ever struggled with who has the latest version of a volunteer list, you can leave that headache behind. With GoodCloud, all of your lists are kept up to date in real-time.  We don't like headaches. We figure you don't either.
+
 				<div class="feature find_fast">
 					<div class="title">Find people fast</div>
 					<div class="description png_bg identical_height_block">The fastest, easiest contact lookup on this side of the galaxy.
@@ -46,6 +53,30 @@
 	</div>
 	<div class="tab_content company" id="know_your_people">
 		<div class="page_top_hook">Never forget a birthday. Or a conversation.</div>
+Goodcloud makes it easy for you to know each of your people. 
+With GoodCloud, you can know people like:
+John, a donor, who
+Sara, the dev dir talked to on april 14th of this year, about our upcoming fundraiser.  John has just moved into a new house.
+John has given 6 times in the past year, totalling $8,150 
+His twitter feed is @johnsmith, and he’s been writing recently about his boy’s football team.
+Sara has a follow-up call scheduled for August 21
+Cindy, a volunteer
+Cindy has been trained to work with youth and seniors
+She’s a part of the first tuesdays volunteer group
+She’s donated once per year for the last four years
+She’s available tuesdays, thursdays, and sundays
+Will, a participant
+Will has been involved with our organization for two years.
+He participated in the spring 2011 and fall 2011 sessions.
+Will has been a group leader.
+Will is interested in the spring 2012 session.
+Will made a $30 donation after the spring 2011 session.
+
+
+		Nonprofit staff are simply amazing at remembering people, faces, and interactions.  But wouldn't it be nice to not have to ask the development director about the last call before sending an email? 
+
+		With GoodCloud, it's easy to record the interactions you have with all the people your organizations touches. When the phone rings, you can be on the same page in a matter of seconds.
+
 
 		<div class="row">
 			<div class="feature donations">
@@ -70,6 +101,14 @@
 		<div class="page_top_hook">Costs less than the competitors.</div>
 		<div class="row">
 		<div class="feature spreadsheet">
+			
+Stop paying for servers, software upgrades, and IT help.
+One system - no separate costs for donors, volunteers, and contact management
+Priced to fit in a small nonprofit’s budget
+how we got our price
+No lock-in
+Your time isn’t free.  Spend time fundraising, leveraging volunteer hours, and directly working on your mission instead of typing and clicking.
+
 			<div class="title">Sometimes, you just need a spreadsheet.</div>
 			<div class="description png_bg identical_height_block">We made it easy to download spreadsheets of anything in GoodCloud. When you’ve gotta make a chart/print a book/make program notes, GoodCloud gives you the data you need, and gets out of your way.</div>
 		</div>
@@ -82,7 +121,6 @@
 
 	</div>
 	<div class="tab_content company" id="less_computer_time">
-		
 		<div class="page_top_hook">Every minute at the computer is a minute away from your mission. Spend fewer of them.</div>
 
 		<div class="row">
@@ -93,7 +131,8 @@
 	We know you don’t have an IT department, and you don’t want to spend your days futzing with a database.  That’s why we’re available anytime to answer questions, listen, and fix any issues you run into.</div>
 		</div>
 		<div class="feature cloud">
-				<div class="title">We're on the Cloud</div>
+				<div class="title">We just keep getting better.</div>
+
 				<div class="description png_bg identical_height_block">No more servers.
 		The cloud has been transforming businesses for the last few years, and GoodCloud brings those benefits to small nonprofits. We’ll take care of managing and securing the servers - and leave you time to focus on your mission.</div>
 		</div>
@@ -115,7 +154,11 @@
 		
 		<div class="page_top_hook">Software that gets better with time - for free.</div>
 
+Cloud based
+As GoodCloud keeps growing and improving, those features are rolled out for free
+
 		<div class="row">
+
 
 		<div class="feature support">
 			<div class="title">Real-people support</div>
