--- a/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
@@ -9,30 +9,31 @@
 	</td>
 	<td>
 		<a href="{% url marketing_site:features %}" class="top_link" >Features</a>
-		<a href="{% url marketing_site:features %}#everything_in_one_place">Full Nonprofit CRM</a>
-		<a href="{% url marketing_site:features %}#our_mission">Know your people</a>
-		<a href="{% url marketing_site:features %}#our_team">Save your money</a>
-		<a href="{% url marketing_site:features %}#our_team">Save your time</a>
-		<a href="{% url marketing_site:features %}#our_team">Cloud-based</a>
+		<a href="{% url marketing_site:features %}#everything_in_one_place">Full CRM for Nonprofits</a>
+		<a href="{% url marketing_site:features %}#know_every_person">Know every person</a>
+		<a href="{% url marketing_site:features %}#save_money">Save your money</a>
+		<a href="{% url marketing_site:features %}#save_time">Save your time</a>
+		<a href="{% url marketing_site:features %}#gets_younger">Cloud-based</a>
+		<a href="{% url marketing_site:features %}#secure">Secure</a>
 	</td>
 	<td>
-		<a href="{% url marketing_site:features %}" class="top_link" >Tour</a>
-		<a href="{% url marketing_site:features %}#everything_in_one_place">Video Tour</a>
-		<a href="{% url marketing_site:features %}#our_mission">Screenshots</a>
+		<a href="{% url marketing_site:tour %}" class="top_link" >Tour</a>
+		<a href="{% url marketing_site:tour %}#video_tour">Video Tour</a>
+		<a href="{% url marketing_site:tour %}#pictures_and_words">Screenshots</a>
 	</td>
 	<td>
-		<a href="{% url marketing_site:features %}" class="top_link" >Legal</a>
-		<a href="{% url marketing_site:features %}#everything_in_one_place">User Agreement</a>
-		<a href="{% url marketing_site:features %}#our_mission">Privacy Policy</a>
-		<div class="copyright">Copyright</div>
+		<a href="{% url marketing_site:legal %}" class="top_link" >Legal</a>
+		<a href="{% url marketing_site:legal %}#user_agreement">User Agreement</a>
+		<a href="{% url marketing_site:legal %}#privacy_policy">Privacy Policy</a>
+		<a href="{% url marketing_site:legal %}#copyright">Copyright</a>
 	</td>
 	<td>
 		<a href="{% url marketing_site:contact_us %}" class="top_link" >Contact Us</a>
-		<a href="{% url marketing_site:contact_us %}">Email</a>
-		<a href="{% url marketing_site:contact_us %}">Phone</a>
-		<a href="#" class="contact_button online">Online</a>
-		<a href="http://www.twitter.com/agoodcloud" target="_blank">Twitter</a>
+		<a href="#" class="contact_button online">Online Support</a>
+		<a href="{% url marketing_site:contact_us %}">Send an Email</a>
+		<a href="{% url marketing_site:contact_us %}">Phone Call</a>
 		<a href="http://www.facebook.com/AGoodCloud" target="_blank">Facebook</a>
+		<a href="http://www.twitter.com/agoodcloud" target="_blank">Twitter</a>
 		<a href="{% url blog %}">Blog</a>
 	</td>
 
