--- a/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
@@ -24,7 +24,7 @@
 		<p>Maybe even at your organization! GoodCloud employees are required to volunteer at least 10 hours a month with nonprofits, and that time is paid. Want to see if we've been slacking? See our <a href="https://spreadsheets.google.com/spreadsheet/ccc?key=0AtDfuCG0bl8rdEdia2NzZk1uSW1ZTmxzaVRORVhaTWc" target="_blank">volunteer hours log</a>!</p>
 
 		<div class="tab_subheading">We donate.</div>
-		<p>GoodCloud employees also recieve stipends to donate to the nonprofits they love.</p><br/><br/>
+		<p>GoodCloud employees also recieve stipends to donate to the nonprofits they love.</p><br/>
 
 		<p>We do things a bit differently than some large corporations you may have heard of. We like it that way, and we think you will too.</p>
 
