--- a/mycelium/apps/marketing_site/templates/marketing_site/legal.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/legal.html
@@ -168,7 +168,7 @@
 		</p>
 
 	</div>
-	<div class="tab_content" id="user_agreement">
+	<div class="tab_content" id="copyright">
 		<div class="tab_title">Please ask before borrowing.</div>
 		All content is copyright GoodCloud, LLC, 2010-{% now "Y" %}.  All rights are reserved.
 	</div>
