--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -1,6 +1,6 @@
 {% extends "marketing_site/base.html" %}
 {% load i18n generic_fields friendly_data_formatting  %}
-{% block title %}The features that small nonprofits really need: GoodCloud{% endblock %}
+{% block title %}Membership management features that small nonprofits actually need.{% endblock %}
 {% block description %}We built GoodCloud collaboratively with small nonprofits, to do the things you do every day. Contact, volunteer, and donor tracking - it's all here.{% endblock %}
 
 
@@ -13,7 +13,8 @@
 	 	<li><a href="#know_your_people">Know your people</a></li>
 	 	<li><a href="#save_money">Save money</a></li>
 	 	<li><a href="#less_computer_time">Less computer-time</a></li>
-	 	<li><a href="#gets_younger">Software that gets better</a></li>
+	 	<li><a href="#gets_younger">Keeps getting better</a></li>
+	 	<li><a href="#secure">Safe and secure</a></li>
  	</ul>
 
 	<div class="tab_content company" id="everything_in_one_place">
@@ -53,8 +54,7 @@
 	</div>
 	<div class="tab_content company" id="know_your_people">
 		<div class="page_top_hook">Never forget a birthday. Or a conversation.</div>
-Goodcloud makes it easy for you to know each of your people. 
-With GoodCloud, you can know people like:
+Goodcloud makes it easy for you to know each of your people. People like:
 John, a donor, who
 Sara, the dev dir talked to on april 14th of this year, about our upcoming fundraiser.  John has just moved into a new house.
 John has given 6 times in the past year, totalling $8,150 
@@ -122,6 +122,7 @@ Your time isn’t free.  Spend time fundraising, leveraging volunteer hours, and
 	</div>
 	<div class="tab_content company" id="less_computer_time">
 		<div class="page_top_hook">Every minute at the computer is a minute away from your mission. Spend fewer of them.</div>
+Unless your mission involves computers, chances are you'd rather not be staring at one.  One of our core goals in designing GoodCloud was to make the processes nonprofits do dozens of times a day really fast. Things like looking up a phone number or email, or printing a mailing label.  We've made it as quick and simple as possible to common tasks, so you can get in, get the information you need, and get on with your day.
 
 		<div class="row">
 
@@ -183,7 +184,46 @@ As GoodCloud keeps growing and improving, those features are rolled out for free
 			</div>
 		</div>
 
-	</div>	
+	</div>
+	<div class="tab_content company" id="secure">
+		
+		<div class="page_top_hook">Secure access, constant backups.</div>
+
+The page you're looking at right now? It's secure.  Just like every page in GoodCloud. We've made the security and integrity of your data one of our key concerns, and you can rest well knowing you're in good hands. 
+
+SSL
+PCI compliant datacenters
+
+Constant backups
+
+
+		<div class="row">
+
+
+		<div class="feature support">
+			<div class="title">Real-people support</div>
+			<div class="description png_bg identical_height_block">We answer the phone. And our email.  
+	We know you don’t have an IT department, and you don’t want to spend your days futzing with a database.  That’s why we’re available anytime to answer questions, listen, and fix any issues you run into.</div>
+		</div>
+		<div class="feature cloud">
+				<div class="title">We're on the Cloud</div>
+				<div class="description png_bg identical_height_block">No more servers.
+		The cloud has been transforming businesses for the last few years, and GoodCloud brings those benefits to small nonprofits. We’ll take care of managing and securing the servers - and leave you time to focus on your mission.</div>
+		</div>
+
+		</div>
+
+		<div class="row">
+			<div class="feature more_to_come">
+				<div class="title">We're not done yet</div>
+				<div class="description png_bg identical_height_block">We're not stopping until GoodCloud takes care of all of your computer headaches, without making any new ones. We've got features on the road-map for Develoment Directors, Volunteer Coordinators, Executive Directors, and Volunteers!</div>
+			</div>
+			<div class="">
+
+			</div>
+		</div>
+
+	</div>		
 </div>
 
 <a href="{% url accounts:signup %}" class="page_action png_bg">Try GoodCloud today!</a>
