--- a/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
@@ -25,36 +25,54 @@
 			<div class="page_top_hook">We like to keep things simple.</div>
 
 			
-			<div class="the_price">GoodCloud is 50 dollars a month.</div>
-			<div class="the_details">No strings, no contracts, no hidden fees. Everything included.</div>
+			GoodCloud is just 50 dollars a month.  
+			<br/>
+			<br/>No strings, no contracts, no hidden fees. Everything included.
 
-			<div class="subheading">Why $50?</div>
-			When we started GoodCloud, we interviewed small nonprofits to see what they were paying for their software needs.  Then we took the smallest number we heard, and cut it in half.  We believe that small nonprofits should have access to great software at a price they can afford. 
+			<div class="feature why_50">
+					<div class="title">Why $50?</div>
+			
+					When we started GoodCloud, we interviewed small nonprofits to see what they were paying for their software needs.  Then we took the smallest number we heard, and cut it in half.  We believe that small nonprofits should have access to great software at a price they can afford. 
+			</div>
 
-			<div class="subheading">Not sure if GoodCloud's a good fit for your organization?</div>
-			The first 30 days are on us. Give it a try, and see for yourself.
+			
 	</div>
 
 	<div class="tab_content" id="everything_included">
 			<div class="page_top_hook">Batteries included.</div>
+			<p>Our pricing is based on a radical concept: <i>we want to help you grow</i>.  </p>
 
-			
-			Here's a case where what's different is the things we don't do. (Hint: it's make you pay more.)
+			<p>Other companies watch you bringing in a new staff member and see dollar signs.  We cheer. </p>
+
+			<p>Other services see you reaching more donors and volunteers, and see dollar signs. We say, "Add some more!"  We've built a <a href="{% url marketing_site:about_us %}">sustainable business that we love</a> on those $50 a month - and we're happy with that.  What we really want is a better world, and you're the key to making that happen.  You have our full support.</p>
+
+			<p>Here's some of the unlimited you only get at GoodCloud:
 			<ul>
-				<li>No per-user charges</li>
-				<li>No limit to the number of contacts</li>
+				<li>Unlimited number of users</li>
+				<li>Unlimited number of contacts</li>
+				<li>Unlimited number of donations</li>
+				<li>Unlimited donation history</li>
+				<li>Unlimited volunteer history</li>
+				<li>Unlimited number of tags</li>
+				<li>Unlimited imports and exports</li>
+			</ul>
+			</p>
+
+			<p>
+			Here's what else we won't do:
+			<ul>
 				<li>No charge for support</li>
 				<li>No call center halfway across the world</li>
 				<li>No sudden price changes</li>
 				<li>No treating you like a dollar sign.</li>
 			</ul>
+			</p>
 	</div>
 
 	<div class="tab_content" id="free_tour">
 			<div class="page_top_hook">See for yourself.</div>
 
-			
-			When you sign up for a GoodCloud account, your first 30 days are free.  We'll be in touch throughout those 30 days to see if you have questions, and to learn a bit more about you and your organization.  You know, like people do.
+			When you sign up for a GoodCloud account, your first 30 days are on us.  We'll be in touch throughout those 30 days to see if you have questions, and to learn a bit more about you and your organization.  You know, like real people do.
 	</div>
 
 
